- bios/acsi.c bios/floppy.c bios/processor.h bios/processor.S
  include/asmdefs.h: Fix bug: caches were not flushed/invalidated when
  DMA was used. (RFB)
- bios/lineainit.c bios/lineavars.h vdi/vdi_misc.c vdi/vdi_tblit.S
  vdi/vdi_tblit_cf.S: Fixed Hatari extended VDI screens in ST mode. (VRI)

2013-02-02
- po/it.po: Updated. Contributed by Lodovico Zanier. (VRI)
- bios/startup.S: Removed Hatari workaround, since the RESET instruction is not
  used anymore in emutos-ram. (VRI)
- bios/ikbd.c bios/panicasm.S bios/screen.c include/kprint.h: Added
  warm_reset() to restart the current OS. (VRI)

2013-02-03
- bios/bios.c bios/panicasm.S bios/tosvars.h bios/tosvars.S include/config.h:
  Added proper warm boot detection on the FireBee and in emutos-ram.
- po/ru.po: Updated. Contributed by Dima Sobolev. (VRI)
- bios/machine.c: Fixed crash of emutos-ram on machines without SCC. (VRI)
- bios/vt52.c: Fixed vt52_init() and Setscreen() to clear the screen. (VRI)
- bios/bios.c bios/initinfo.c bios/initinfo.h: Removed initscreen(). (VRI)
- bdos/proc.c bios/acsi.c bios/floppy.c bios/processor.h bios/processor.S:
  Renamed the CPU cache management functions(). (VRI)
- bios/processor.S: Implemented data cache functions for ColdFire. (VRI)
- bios/initinfo.S: Remove useless initinfo scroll on RGB monitors. (VRI)
- bios/floppy.c: Added cache management for loading bootsector. (VRI)
- bios/disk.c: Limited byteswap support to IDE devices. (VRI)

2013-02-05
- po/es.po: Updated. Contributed by David Gálvez. (VRI)

2013-02-06
- Makefile release.mk: Renamed amiga-kickdisk target to amigakd. (VRI)
- include/config.h: Enabled again IDE on Amiga (was disabled by mistake). (VRI)
- bios/amiga.c bios/aros.c bios/aros2.S include/config.h: Added CONF_WITH_AROS
  to enable compilation with AROS sources. This is disabled by default due to
  license issues. (VRI)
- bios/aros.c bios/aros2.S doc/license_aros.txt: Added AROS APL license. (VRI)