@@ -88,13 +88,7 @@ extern LONG ramtop;       /* top of fastram */
 #define RAMVALID_MAGIC 0x1357BD13
 extern LONG ramvalid;     /* indicates if fastram is present */
 
-/* if == 0x87654321, means that GEM is present;
- * EmuTOS convention: if == 0x1234abcd, means that the TOS
- * was booted from an autoboot floppy, and so asks to remove
- * the floppy before going on.
- */
-#define OS_MAGIC_EJECT 0x1234abcd
-extern LONG os_magic;
+extern LONG os_magic;     /* if == 0x87654321, means that GEM is present */
 
 extern LONG pun_ptr;
 
@@ -143,6 +137,17 @@ struct kbdvecs
     void (*ikbdsys)( void );        /* Main IKBD Vector */
 };
 extern struct kbdvecs kbdvecs;
+
+#ifdef EMUTOS_RAM
+
+/*
+ * If eject_magic == EJECT_MAGIC, this is a cold boot from emutos-floppy.
+ * So ask to remove the floppy before going on.
+ */
+#define EJECT_MAGIC 0x1234abcd
+extern ULONG eject_magic;
+
+#endif /* EMUTOS_RAM */
 
 #if CONF_WITH_PSEUDO_COLD_BOOT
 #define WARM_MAGIC 0x5741524D /* "WARM" */
